# libcurves-demo

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: libcurves-demo_test.cpp
